# dbt-showcase

./: README.md  demo.py  docker-compose.yml  pyproject.toml
docs/: incremental_models.md  snapshots.md  tests.md
jaffle_shop/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
jaffle_shop/models/: sources.yml
jaffle_shop/models/marts/finance/: orders.sql  schema.yml
jaffle_shop/models/metrics/: average_order_amount.sql  metrics.yml
jaffle_shop/models/staging/: schema.yml  stg_analytics.sql  stg_customer_addresses.sql  stg_customers.sql  stg_payments.sql
jaffle_shop/seeds/: raw_analytics.csv  raw_customer_addresses.csv
jaffle_shop/snapshots/: customer_addresses.sql
jaffle_shop/tests/: assert_payment_amount_is_positive.sql
jaffle_shop/tests/generic/: assert_greater_equal_zero.sql
scripts/: dbcontrol.py
scripts/notebooks/: db_script.ipynb  incremental_simulator.ipynb  snapshot_simulator.ipynb
scripts/sql/: incremental.sql  snapshot.sql  tables.sql
